Apply suggestions from code review
Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -424,7 +424,7 @@ Return to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-conten
 
 Within a few minutes, the test queries you executed in the previous step should be represented on this page. The Insights page is vital to monitoring your supergraph's performance across all of your clients that query the router.
 
-Learn more about the available metrics in the [metrics documentation](../metrics). Expand the summary table below to Learn more about the other variant pages in Studio.
+Learn more about the available metrics in the [metrics documentation](../metrics). Expand the summary table below to learn more about the other variant pages in Studio.
 
 ### Variant pages in Studio
 
