--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -67,7 +67,7 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 ## Schema pipeline
 
-GraphOS provides schema pipeline tools to efficiently develop and deploy changes to your supergraph schema. Check out the [Schema pipeline overview](../delivery) to learn more about the full suite of tools.
+GraphOS provides schema [pipeline tools](../delivery) to efficiently develop and deploy changes to your supergraph schema.
 
 ### Schema change management with proposals
 
