--- a/src/content/technotes/TN0045-router_resource_estimator.mdx
+++ b/src/content/technotes/TN0045-router_resource_estimator.mdx
@@ -8,11 +8,13 @@ import RouterResourceEstimator from '../../components/TechNotes/RouterResourceEs
 
 The **router resource estimator** estimates the system resources you need to allocate for the Apollo Router to run production traffic. The resource estimator can help you get a _starting baseline_ that you can then iterate on.
 
+## Usage
+
 To use the estimator:
 
-1. Enter your expected average **request rate (RPS)** and **peak request rate (RPS)**.
+1. Enter your expected average **request rate per second** and **peak request rate per second**.
 2. Adjust the other parameters to match your expected production load.
-   - When selecting the number of instances, select fewer for efficiency, more for safety.
+   - When selecting the **number of instances**, select fewer for efficiency, more for safety.
 3. Be sure to **test and iterate**.
 
 ## Router resource estimator
