--- a/src/content/graphos/delivery/contract-reference.mdx
+++ b/src/content/graphos/delivery/contract-reference.mdx
@@ -1,6 +1,6 @@
 ---
 title: Contract reference
-subtitle: Learn rules for @tags and filtering and errors you may encounter when creating and using contracts
+subtitle: Reference for valid @tag locations, names, contract errors, and more
 description: Reference for valid @tag locations, naming conventions, dependent tag relationships, and errors for Apollo GraphOS contracts.
 ---
 
@@ -353,7 +353,7 @@ GraphOS encountered an error while attempting to exclude unreachable types in th
 </td>
 <td>
 
-The Federation version used is not supported by contracts.
+Contracts do not support the Federation version used.
 
 </td>
 </tr>
