--- a/src/content/technotes/TN0045-router_resource_estimator.mdx
+++ b/src/content/technotes/TN0045-router_resource_estimator.mdx
@@ -1,10 +1,11 @@
 ---
 title: Router resource estimator
 id: TN0045
+toc: false
 tags: [router]
 ---
 
-import RouterResourceEstimator from '../../components/TechNotes/RouterResourceEstimator';
+import RouterResourceEstimator from "../../components/TechNotes/RouterResourceEstimator";
 
 The **router resource estimator** estimates the system resources you need to allocate for the Apollo Router to run production traffic. The resource estimator can help you get a _starting baseline_ that you can then iterate on.
 
