--- a/src/content/technotes/TN0045-router_resource_estimator.mdx
+++ b/src/content/technotes/TN0045-router_resource_estimator.mdx
@@ -13,8 +13,8 @@ The **router resource estimator** estimates the system resources you need to all
 
 To use the estimator:
 
-1. Enter your expected average **request rate per second** and **peak request rate per second**.
-2. Adjust the other parameters to match your expected production load.
+1. Enter your estimated **request rate per second** and **peak request rate per second**.
+2. Adjust the other parameters to match your estimated production load.
    - When selecting the **number of instances**, select fewer for efficiency, more for safety.
 3. Be sure to **test and iterate**.
 
