--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -15,7 +15,7 @@ These rules enforce naming conventions. Rules are categorized by the part(s) of 
 <RuleExpansionPanel
   title="FIELD_NAMES_SHOULD_BE_CAMEL_CASE"
   whatItDoes="Checks that all field names use `camelCase`."
-  rationale="`camelCase` is a common convention for field names in GraphQL."
+  rationale="`camelCase` is a convention for field names in GraphQL."
 >
 
 The following example violates the rule:
@@ -44,8 +44,8 @@ type User {
 
 <RuleExpansionPanel
   title="RESTY_FIELD_NAMES"
-  whatItDoes="Checks that field's name don't start with any of the following verbs: `get`, `list`, `post`, `put`, `patch`."
-  rationale="Most fields should not start with any verb, with the exception of mutation fields. For mutation fields, it's best to use a verb that more specifically describes the action being performed, for example, `create`, `delete`, or `edit`.">
+  whatItDoes="Checks that a field's name doesn't start with any of the following verbs: `get`, `list`, `post`, `put`, `patch`."
+  rationale="Fields should not start with a verb, except for mutations. For mutation fields, it's best to use a verb that describes the specific action being performed, for example, `create`, `delete`, or `edit`.">
 
 The following example violates the rule:
 
@@ -80,7 +80,7 @@ These rules apply to _all_ types that appear in a GraphQL schema, including:
 <RuleExpansionPanel
   title="TYPE_NAMES_SHOULD_BE_PASCAL_CASE"
   whatItDoes="Checks that all type names use `PascalCase`."
-  rationale="`PascalCase` is a common convention for type names in GraphQL."
+  rationale="`PascalCase` is a convention for type names in GraphQL."
 >
 
 The following example violates the rule:
@@ -465,7 +465,7 @@ type Query {
 <RuleExpansionPanel
   title="ENUM_USED_AS_OUTPUT_DESPITE_SUFFIX"
   whatItDoes="If an enum is used as the return type of a _non_-input field, checks that its name doesn't use the suffix `Input`."
-  rationale="Including the suffix `Input` on an output type is confusing."
+  rationale="Including the suffix `Input` on an output type is misleading."
 >
 
 The following example violates the rule:
@@ -558,13 +558,13 @@ These rules apply to the entire schema.
 
 <RuleExpansionPanel
   title="DOES_NOT_PARSE"
-  whatItDoes="Checks for malformed GraphQL schemas. Check your schema for any syntax errors."
+  whatItDoes="Checks for malformed GraphQL schemas. To resolve, check your schema for syntax errors."
 />
 
 <RuleExpansionPanel
   title="ALL_ELEMENTS_REQUIRE_DESCRIPTION"
   whatItDoes="Checks that each element in the schema includes a [description](/apollo-server/schema/schema/#descriptions-docstrings)."
-  rationale="Descriptions serve as documentation for your GraphQL schema. They make it easier for consumers of your graph discover fields and learn how to use them. Check out [examples](/apollo-server/schema/schema/#descriptions-docstrings)."
+  rationale="Descriptions document your GraphQL schema so consumers of your graph can easily discover fields and learn how to use them. See [examples](/apollo-server/schema/schema/#descriptions-docstrings)."
 >
 
 The following example violates the rule:
@@ -582,8 +582,8 @@ Use instead:
 ```graphql title="✅ schema.graphql" disableCopy=true showLineNumbers=false
 "Represents a user"
 type User {
-  "The user's username"
-  username: String!
+ "A username must be [8-64] characters."
+ username: String!
 }
 ```
 
@@ -592,7 +592,7 @@ type User {
 <RuleExpansionPanel
   title="DEFINED_TYPES_ARE_USED"
   whatItDoes="Checks that every type defined in a schema is be used at least once."
-  rationale="Unused types commonly appear after you refactor other parts of your schema. You should remove unused types to prevent confusion."
+  rationale="Unused types waste resources and should be immediately removed once they've been refactored out of a schema."
 >
 
 The following example violates the rule:
@@ -630,8 +630,8 @@ type Query {
 
 <RuleExpansionPanel
   title="QUERY_DOCUMENT_DECLARATION"
-  whatItDoes="Checks that schemas don't define operations such as queries and mutations."
-  rationale="Schemas define types, fields, and their relationships. Operations specify what data to fetch or change. Since what to fetch or change is a client concern, operations should be defined on the client side. This separation allows for a clean and modular architecture, making it easier to manage and evolve the API over time."
+  whatItDoes="Checks that schemas don't define operations, such as queries and mutations."
+  rationale="Operations should be defined on the client side, not within schemas. Schemas define types, fields, and their relationships. Operations specify what data to fetch or change. Since what to fetch or change is a client concern, this separation allows for a clean and modular architecture, making it easier to manage and evolve the API over time."
 >
 
 The following example violates the rule:
