--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -279,7 +279,7 @@ interface Book { # highlight-line
 <RuleExpansionPanel
   title="INPUT_ARGUMENT_NAMES_SHOULD_BE_CAMEL_CASE"
   whatItDoes="Checks that argument names use `camelCase`."
-  rationale="`camelCase` is a common convention for argument names in GraphQL."
+  rationale="`camelCase` is a convention for argument names in GraphQL."
 >
 
 The following example violates the rule:
@@ -339,7 +339,7 @@ input BlogPostDetailsInput { #highlight-line
 <RuleExpansionPanel
   title="ENUM_VALUES_SHOULD_BE_SCREAMING_SNAKE_CASE"
   whatItDoes="Checks that enum values use `SCREAMING_SNAKE_CASE`."
-  rationale="`SCREAMING_SNAKE_CASE` is a common convention for enum values in GraphQL."
+  rationale="`SCREAMING_SNAKE_CASE` is a convention for enum values in GraphQL."
 >
 
 The following example violates the rule:
@@ -503,7 +503,7 @@ type Query {
 <RuleExpansionPanel
   title="DIRECTIVE_NAMES_SHOULD_BE_CAMEL_CASE"
   whatItDoes="Checks that directive names use `camelCase`."
-  rationale="`camelCase` is a common convention for directive names in GraphQL."
+  rationale="`camelCase` is a convention for directive names in GraphQL."
 >
 
 The following example violates the rule:
