--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -110,7 +110,7 @@ type StreamingService { # PascalCase
 <RuleExpansionPanel
   title="TYPE_PREFIX"
   whatItDoes="Checks that type names don't start with the prefix `Type`."
-  rationale="Starting type names with `Type` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
+  rationale="Avoid using the redundant `Type` prefix to shorten your schema definitions and improve readability."
 >
 
 The following example violates the rule:
@@ -136,7 +136,7 @@ type Book { # highlight-line
 <RuleExpansionPanel
   title="TYPE_SUFFIX"
   whatItDoes="Checks that type names don't use the suffix `Type`."
-  rationale="Ending type names with `Type` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
+  rationale="Avoid using the redundant `Type` suffix to shorten your schema definitions and improve readability."
 >
 
 The following example violates the rule:
@@ -165,7 +165,7 @@ type Book { # highlight-line
 <RuleExpansionPanel
   title="OBJECT_PREFIX"
   whatItDoes="Checks that object type names don't start with the prefix `Object`."
-  rationale="Starting object type names with `Object` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
+  rationale="Avoid using the redundant `Object` prefix to shorten your schema definitions and improve readability."
 >
 
 The following example violates the rule:
@@ -191,7 +191,7 @@ type Book { # highlight-line
 <RuleExpansionPanel
   title="OBJECT_SUFFIX"
   whatItDoes="Checks that object type names don't use the suffix `Object`."
-  rationale="Ending object type names with `Object` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
+  rationale="Avoid using the redundant `Object` suffix to shorten your schema definitions and improve readability."
 >
 
 The following example violates the rule:
@@ -220,7 +220,7 @@ type Book { # highlight-line
 <RuleExpansionPanel
   title="INTERFACE_PREFIX"
   whatItDoes="Checks that interface type names don't start with the prefix `Interface`."
-  rationale="Starting interface type names with `Interface` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
+  rationale="Avoid using the redundant `Interface` prefix to shorten your schema definitions and improve readability."
 >
 
 The following example violates the rule:
@@ -248,7 +248,7 @@ interface Book { # highlight-line
 <RuleExpansionPanel
   title="INTERFACE_SUFFIX"
   whatItDoes="Checks that interface type names don't use the suffix `Interface`."
-  rationale="Ending interface type names with `Interface` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
+  rationale="Avoid using the redundant `Interface` suffix to shorten your schema definitions and improve readability."
 >
 
 The following example violates the rule:
@@ -369,7 +369,7 @@ enum Amenity {
 <RuleExpansionPanel
   title="ENUM_PREFIX"
   whatItDoes="Checks that enum type names don't start with the prefix `Enum`."
-  rationale="Starting enum type names with `Enum` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
+  rationale="Avoid using the redundant `Enum` prefix to shorten your schema definitions and improve readability."
 >
 
 The following example violates the rule:
@@ -399,8 +399,7 @@ enum Residence { # highlight-line
 <RuleExpansionPanel
   title="ENUM_SUFFIX"
   whatItDoes="Checks that enum type names don't use the suffix `Enum`."
-  rationale="Ending enum type names with `Enum` is redundant. It makes your schema definitions longer than necessary and your schema less readable."
->
+  rationale="Avoid using the redundant `Enum` suffix to shorten your schema definitions and improve readability.""
 
 The following example violates the rule:
 
